# ocpstarter

./: .gitignore  CMakeLists.txt  README.md  ocp.yml
source/: CMakeLists.txt  DefineUser.cmake  define.cpp
